src/test/contracts/negative/deep_pattern_matching/pm_fail12.religo
type recordi = { a : option(list(int)) , b : list(int) };

let t13 = (x:recordi) =>
  switch(x) {
  | { a : Some ([])          , b : [hd, ...tl] } => hd
  | { a : Some ([hd, ...tl]) , b : [] }          => hd
  }